poryecto por terminar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="nav__contenedor">
                         <!--logo-->
                         <figure class="nav__figure">
-                            <img src="assets/carpetaimg/favicon-2.png" class="nav__logo" alt="logo">
+                            <img src="asset/icons/logo.png" class="nav__logo" alt="logo">
                         </figure>
                         <!--Boton-->
                         <label class="nav__toggle">
@@ -55,7 +55,7 @@
                     <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, officia.</p>
                     <a href="" class="cta">Aprende Ahora</a>
                   </div>
-                  <img src="/assets/carpetaimg/nerd.png" alt="nerd">
+                  <img src="/asset/carpetaimg/nerd.png" alt="nerd">
                   
               </div>
         
@@ -64,7 +64,7 @@
             <section id="nosotros">
                 <div class="contenedor nosotros vh-100 contenedor-textos">
                    <div>
-                    <img src="/assets/carpetaimg/about.png" alt="about">
+                    <img src="/asset/carpetaimg/about.png" alt="about">
                    </div>
                    <div class="contenedor-textos">
                     <h2 class="titulo">Nosotros</h2>
