--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="nav__contenedor">
                         <!--logo-->
                         <figure class="nav__figure">
-                            <img src="assets/carpetaimg/favicon-2.png" class="nav__logo" alt="logo">
+                            <img src="assets/icons/favicon.png" class="nav__logo" alt="logo">
                         </figure>
                         <!--Boton-->
                         <label class="nav__toggle">
